fix: add back gap in options dropdown

--- a/app/app.module.css
+++ b/app/app.module.css
@@ -75,6 +75,13 @@
   }
 }
 
+.optionsBody {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .keyEntry {
   display: flex;
   align-items: center;
